src/test/resources/semantic/reject/assignmentToWrongTypeArray.ul
void main() {
}

void foo() {
    string[5] foo;
    foo = "string";
}
